--- a/src/main/asciidoc/wuic-documentation.adoc
+++ b/src/main/asciidoc/wuic-documentation.adoc
@@ -80,7 +80,7 @@ You will find more tutorials about that link:more-tutorials.html[here].
 
 After this, you'll find below the detailed documentation about different components browsed in the tutorials:
 
-* Complete XML configuration documentation (TODO: migrate https://github.com/wuic/wuic/wiki/Understanding-wuic.xml)
+* <<api.html#_configuring_the_wuic_xml,Complete wuic.xml configuration>>
 * <<api.html#_configuring_the_web_xml,Complete web.xml configuration>>
 * <<api.html#_java_config,Java Config alternative>>
 * Available engines (TODO: migrate https://github.com/wuic/wuic/wiki/Engine-configuration) and [DAO](https://github.com/wuic/wuic/wiki/Data-Access-Object)
